[package]
name = "renderer"
version = "0.1.0"
authors = ["Quinten van Woerkom <quintenvanwoerkom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2.0"
error-chain = "0.12.2"
image = "0.23.7"
futures = "0.3.5"
nalgebra = "0.21.1"
shaderc = "0.6"
tobj = "2.0.2"
wgpu = "0.5.2"
winit = "0.22.2"